CLaJ-MC 1.3.0: merge refactored codebase
- Thread-safety hardening (ProxyClient connectionsMap locking, snapshot iteration)
- Null/EOF defenses (AddressUtil, VirtualConnection, ClajType, FrameUtil clean-EOF)
- Typo fixes with backward-compatible deprecated aliases (ClientDisconnectedEvent, isCreated, scheduleRoomAfk)
- Plugins cache key fix (plugin class instead of Class.class), ClajControl multi-word messages
- Password field digit filtering, text truncation in server list UI, loopback close guard
- JUnit 5 test suite (33 tests), .github templates, CONTRIBUTING/SECURITY/CODE_OF_CONDUCT
- README rewrite (zh/en) with restored credits, security notes and frame-limit warning
- Server subproject keeps protocol version 2.4.2